# alphafold

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: pipeline.yaml
dashboard/: app.py  demo_summary.json
data/: download.sh
data/benchmark/: demo_benchmark.csv
src/alphafold_vs_pipeline/: __init__.py  cli.py  config.py  pipeline.py
src/alphafold_vs_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/alphafold_vs_pipeline/stages/: __init__.py  admet.py  docking.py  libraries.py  pockets.py  ranking.py  rescoring.py  structure.py
tests/: test_cli_pipeline.py  test_config.py
