[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphafold-vs-pipeline"
version = "0.1.0"
description = "AlphaFold-guided virtual screening pipeline scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "alphafold-vs-pipeline contributors" }]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dashboard = [
  "streamlit>=1.35.0",
  "plotly>=5.24.0",
  "pandas>=2.0.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
alphafold-vs = "alphafold_vs_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
